--- a/ui/styles/globals.css
+++ b/ui/styles/globals.css
@@ -1,3 +1,11 @@
 body {
   font-family: 'Inter', sans-serif;
 }
+
+button {
+  font-family: 'Inter', sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Manrope', sans-serif;
+}
